--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,17 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  intl: ^0.19.0
   cupertino_icons: ^1.0.6
+  equatable: ^2.0.5
+  flutter_screenutil: ^5.9.3
+  flutter_bloc: ^8.1.5
+  shared_preferences: ^2.2.3
+  lottie: ^3.1.2
+  email_validator: ^2.1.17
+  dartz: ^0.10.1
+  toggle_switch: ^2.3.0
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
